need connect API

--- a/test.html
+++ b/test.html
@@ -15,43 +15,19 @@
     resize: both;
   }
   button {
-    -moz-box-shadow: 0px 1px 0px 0px #fff6af;
-    -webkit-box-shadow: 0px 1px 0px 0px #fff6af;
-    box-shadow: 0px 1px 0px 0px #fff6af;
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffec64), color-stop(1, #ffab23));
-    background:-moz-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-    background:-webkit-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-    background:-o-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-    background:-ms-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-    background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#ffab23',GradientType=0);
-    background-color:#ffec64;
-    -moz-border-radius:15px;
-    -webkit-border-radius:15px;
-    border-radius:10px;
-    border:1px solid #ffaa22;
-    display:inline-block;
-    cursor:pointer;
-    color:#333333;
-    font-family:Arial;
-    font-size:15px;
-    font-weight:bold;
-    padding:5px 10px;
-    text-decoration:none;
-    text-shadow:0px 1px 0px #ffee66;
-  }
-  .dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
+    background-color: #555555; /* Green */
     border: none;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
     cursor: pointer;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
-}
+    border-radius: 3px;
+  }
+  
 
 .dropdown {
     position: relative;
@@ -87,60 +63,69 @@
 
 .show {display:block;}
 
+#imageContainer{
+    width: 500px;
+    height: 300px;
+    padding-top: 50px;
+}
+
+#editText{
+    position: absolute; /*or fixed*/
+    right: 200px;
+    top: 50px;
+}
+
+#imageUpload{
+    position: absolute; /*or fixed*/
+    left: 100px;
+    top:100px;
+    text-align: center;
+}
+
+.convertButton1{
+    position: absolute;
+    top: 40%;
+    left:45%;
+}
+.convertButton2{
+    position: absolute;
+    top: 50%;
+    left: 45%;
+}
+
 </style>
 <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 </head>
 <body>
-  <div style="background-color:#CCFFFF; width:390px; padding: 10px;">
+<div id="imageUpload">
+    <h2>이미지 업로드</h2>
+    <input class="uploadButton" type="file" name="profile" onchange="setThumbnail(event);">
+    <div id="imageContainer"></div>
+</div>
+<form action="http://localhost/upload.php" method="post" enctype="multipart/form-data"></form>
+    <button class="convertButton1">텍스트로<br>변환</button>
+</form>
+<form action="http://localhost/upload.php" method="post" enctype="multipart/form-data"></form>
+    <button class="convertButton2">중요부분<br>변환</button>
+</form>
+<div id="editText">
+  <div style="width:390px; padding: 10px; text-align:center;">
     <button id="selectAll">전체선택</button>
     <button id="bold">굵게</button>
     <button id="italic">기울임</button>
     <button id="underLine">밑줄</button>
     <br/>
+    <br/>
     <button id="justifyLeft">왼쪽정렬</button>
     <button id="justifyCenter">가운데정렬</button>
     <button id="justifyRight">오른쪽정렬</button>
     <br/>
-    
-    <select id="fontName" width="50px">
-        <option value="">글꼴 선택</option>
-        <option value="돋움">돋움</option>
-        <option value="굴림">굴림</option>
-        <option value="궁서">궁서</option>
-        <option value="바탕">바탕</option>
-        <option value="맑은 고딕">맑은 고딕</option>
-    </select>
-    <select id="fontSize" width="50px">
-        <option value="">글자 크기</option>
-        <option value="1">4px</option>
-        <option value="2">8px</option>
-        <option value="3">10px</option>
-        <option value="4">12px</option>
-        <option value="5">16px</option>
-        <option value="6">20px</option>
-        <option value="7">30px</option>
-    </select>
-    <select id="foreColor" width="50px">
-        <option value="">글자 색깔</option>
-        <option value="#f00">빨강</option>
-        <option value="#00f">파랑</option>
-        <option value="#0f0">초록</option>
-        <option value="#ffff00">노랑</option>
-        <option value="#000">검정</option>
-    </select>
-    <select id="hiliteColor" width="50px">
-        <option value="">글자 배경색</option>
-        <option value="#f00">빨강</option>
-        <option value="#00f">파랑</option>
-        <option value="#0f0">초록</option>
-        <option value="#ffff00">노랑</option>
-        <option value="#000">검정</option>
-    </select>
   </div>
   <div id="text" contenteditable="true" style="width:400px; height:400px;">
       텍스트 편집기
   </div>
+</div>
   
 <ul id="menu" class="test">
     <li><div>글꼴선택</div>
@@ -241,6 +226,22 @@
             }
         }
     }
+
+    // 이미지 미리보기
+    function setThumbnail(event) { 
+        var reader = new FileReader(); 
+        reader.onload = function(event) { 
+            var img = document.createElement("img"); 
+            img.setAttribute("src", event.target.result); 
+            img.setAttribute("width", "500px");
+            img.setAttribute("height", "300px");
+            img.setAttribute("left", "100px");
+            document.querySelector("#imageContainer").appendChild(img); 
+        }; 
+        reader.readAsDataURL(event.target.files[0]); 
+    }
+
+
 </script>
 </body>
 </html>
